--- a/src/main/resources/static/css/techjobs.css
+++ b/src/main/resources/static/css/techjobs.css
@@ -37,3 +37,8 @@ ul.form-group li {
     display: inline-block;
     padding-right: 15px;
 }
+
+.errors {
+    font-weight: bold;
+    color: red;
+}
